# smokeping-prober-ansible

./: README.md  inventory.yaml  parameters-dls-y4.yaml  parameters-dls-y5.yaml  parameters-large-y1.yaml  parameters-medium-y1.yaml  parameters-small-y1.yaml  parameters-small-y3.yaml  parameters-small-y4.yaml  parameters-small-y5.yaml  pyproject.toml  site.yaml
grafana/: dashboard.json
roles/smokeping-prober/defaults/: main.yaml
roles/smokeping-prober/tasks/: deploy.yaml  main.yaml  prep.yaml  undeploy.yaml
roles/smokeping-prober/templates/: configmap.yaml.j2  deployment.yaml.j2  namespace.yaml.j2  role.yaml.j2  rolebinding-sa.yaml.j2  service.yaml.j2  serviceaccount.yaml.j2  servicemonitor.yaml.j2
