[tool.poetry]
name = "smokeping-prober-ansible"
version = "1.0.0"
description = "Playbooks to deploy the SMokePing Prober utility"
authors = ["Alan Christie <alan.christie@matildapeak.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^9.6.0"
kubernetes = "23.6.0"
openshift = "0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
